--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>Anthony web</title>
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,7 +17,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change for your own title for the banner-->
+          <a href="index.html">Anthony Art Gallery</a> <!--Change for your own title for the banner-->
         </h1>
         <ul>
           <li>
@@ -29,28 +30,28 @@
     <article id="page" class="content">
       <h2>My Gallery</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+     Are you up now, Where are you, What are you doing after school, Are you bringing your board             <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a data-lightbox="image-1" href="img/brunobig.jpg"> <!--Add your own big jpg-->
-            <img src="img/brunosmall.jpg">                 <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art1big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art1small.jpg">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-2-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art2big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art2small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-3-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art3big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art3small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-4-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/art4big.jpg"> <!--Add your own big jpg-->
+            <img src="img/art4small.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +61,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your artwork-->
+        <p>While I was in computer art class I leared a lot about art and how to create stuff. I leared all types of art and perspectives. I liked the anpan project the most because it was like creating my very own superhero.</p>      <!--Reflections about your artwork-->
       </div>
     </footer>
   </body>
