--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>While I was in computer art class I leared a lot about art and how to create stuff. I leared all types of art and perspectives. I liked the anpan project the most because it was like creating my very own superhero.</p>      <!--Reflections about your artwork-->
+        <p>While I was in Computer art class I leared a lot about art and how to create stuff. I leared all types of art and perspectives. I liked the anpan project the most because it was like creating my very own superhero.</p>      <!--Reflections about your artwork-->
       </div>
     </footer>
   </body>
